applications/todoable/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-todoable
  labels:
    name: app-todoable
