applications/todoable/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoable-hexagonal-edition
  namespace: app-todoable
  labels:
    app.kubernetes.io/name: todoable-hexagonal-edition
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: todoable-hexagonal-edition
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      labels:
        app.kubernetes.io/name: todoable-hexagonal-edition
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - name: todoable-hexagonal-edition
          image: 'image-registry.openshift-image-registry.svc:5000/app-todoable/todoable-hexagonal-edition:1.0.0-SNAPSHOT'
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
